Fixed carousel buttons overlapping the header

--- a/css/imports/_header.css
+++ b/css/imports/_header.css
@@ -6,7 +6,7 @@ header {
   position: fixed;
   width: 100%;
   min-height: var(--hgt-header);
-  z-index: 1;
+  z-index: 2;
   background-color: var(--clr-blue);
 }
 
